<resources>
    <string name="app_name">PassIt!</string>
    <string name="menu_insertions">Insertions</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_profile">Profile</string>

    <!-- SIGN IN -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="signin_or">OR</string>
    <string name="google">Sign in with Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_link_prefix">Don\'t have an account?</string>
    <string name="register_link">Sign up</string>
    <string name="error_invalid_email">"Invalid email address"</string>
    <string name="error_invalid_password">Invalid Password\nMin 12 characters, digits, lowercase, uppercase, symbols</string>
    <string name="signin_error_alert_title">Sign In Error</string>

    <!-- FIRST STEP SIGN UP -->
    <string name="signup_title">Let\'s get started!</string>
    <string name="signup_subtitle">Create an account to PassIt…</string>
    <string name="confirmation_password">Confirm Password</string>
    <string name="signup_next">Next</string>
    <string name="signin_link_prefix">Already have an account?</string>
    <string name="signin_link">Sign in</string>
    <string name="signup_passwords_missmatch">Passwords don\'t match</string>
    <string name="signup_error_alert_title">Sign Up Error</string>

    <!-- SECOND STEP SIGN UP -->
    <string name="signup_final_title">Almost done!</string>
    <string name="family_name">Family name</string>
    <string name="given_name">Given name</string>
    <string name="phone_number">Phone number</string>
    <string name="birth_date">Date of birth</string>
    <string name="birth_date_placeholder">dd/mm/yyyy</string>
    <string name="birth_date_helper">Date, month, year</string>
    <string name="signup_final">Create</string>
    <string name="signup_missing_parameters">Missing required parameters</string>

    <!-- SIGN UP CONFIRM -->
    <string name="signup_confirm_title">Verify email address</string>
    <string name="signup_confirm_subtitle">Enter the verification code that we have sent to your email</string>
    <string name="verification_code_hint">Verification Code</string>
    <string name="resend_confirmation_code_prefix">Didn\'t you receive any mail?</string>
    <string name="resend_confirmation_code">Send again</string>
    <string name="signup_confirm">Confirm</string>
    <string name="confirmation_error_alert_title">Confirmation Error</string>
    <string name="verification_code_empty_error">Verification code cannot be empty</string>

    <!-- RESET PASSWORD -->
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_subtitle">Enter your email where we will send a code to reset the password</string>
    <string name="reset_password_next">Next</string>
    <string name="resend_reset_link_prefix">Didn\'t you receive any mail?</string>
    <string name="resend_reset_link">Send again</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset_password_confirm">Confirm</string>
    <string name="reset_password_error_alert_title">Reset Password Error</string>

    <!-- PROFILE -->
    <string name="profile_username">%1$s %2$s</string>
    <string name="profile_user_picture_content_description">User profile picture</string>
    <string name="profile_change_profile_picture_title">Choose your profile picture</string>
    <string name="profile_take_picture">Take picture from camera</string>
    <string name="profile_choose_picture">Choose from gallery</string>
    <string name="profile_new_picture_cancel">Cancel</string>
    <string name="change_picture_error_alert_title">Change Picture Error</string>
    <string name="profile_signout">Sign out</string>

    <!-- INSERTIONS LIST -->
    <string name="create_insertion">Create</string>
    <string name="search_subject">Subject</string>
    <string name="search_city">City</string>
    <string name="search_state">State</string>
    <string name="search_country">Country</string>
    <string name="search_insertions">Search</string>
    <string name="search_insertions_error">Search error</string>
    <string name="empty_insertions_result">No insertions found.</string>
    <string name="insertions_list_tutor_picture_content_description">Tutor profile picture</string>

    <!-- CREATE INSERTION -->
    <string name="create_insertion_title">Create a new Insertion</string>
    <string name="create_insertion_subtitle">So that other users can find your service</string>
    <string name="insertion_input_title">Title</string>
    <string name="insertion_input_description">Description</string>
    <string name="insertion_input_subject">Subject</string>
    <string name="insertion_input_city">City</string>
    <string name="insertion_input_state">State</string>
    <string name="insertion_input_country">Country</string>
    <string name="create_insertion_ok">Create</string>
    <string name="create_insertion_cancel">Cancel</string>
    <string name="create_insertion_title_empty_error">Title cannot be empty</string>
    <string name="create_insertion_description_empty_error">Description cannot be empty</string>
    <string name="create_insertion_subject_empty_error">Subject cannot be empty</string>
    <string name="create_insertion_city_empty_error">City cannot be empty</string>
    <string name="create_insertion_state_empty_error">State cannot be empty</string>
    <string name="create_insertion_country_empty_error">Country cannot be empty</string>

    <!-- SHOW INSERTION -->
    <string name="show_insertion_back_button">Back</string>
    <string name="show_insertion_title_placeholder">Insertion title</string>
    <string name="show_insertion_location_placeholder">Insertion location</string>
    <string name="show_insertion_status_format">Status: %1$s</string>
    <string name="show_insertion_tutor_name_placeholder">Tutor Name</string>
    <string name="show_insertion_date_placeholder">Ins. Date</string>
    <string name="show_insertion_location_format">%1$s, %2$s, %3s</string>
    <string name="show_insertion_tutor_name_format">%1$s %2$s</string>
    <string name="show_insertion_contact_tutor">Contact</string>
    <string name="show_insertion_conversation_same_user_error">You are the tutor for this insertion</string>
    <string name="show_insertion_description_placeholder">Insertion description</string>
    <string name="show_insertion_tutor_picture_content_description">Tutor profile picture</string>
    <string name="show_insertion_open_button">Open Insertion</string>
    <string name="show_insertion_close_button">Close Insertion</string>

    <!-- CONVERSATIONS LIST -->
    <string name="get_conversations_error">Get conversations error</string>
    <string name="messageDatePlaceholder">dd/MM/yyyyy</string>
    <string name="write_message_hint">Write a message</string>
</resources>