<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.auth.SignUpSecondStepFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/progressIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="45dp"
        android:clipToPadding="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/signup_final_title"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="24sp"
            android:fontFamily="@font/poppins_bold"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="60dp"
                android:hint="@string/family_name"
                app:startIconDrawable="@drawable/ic_person_outline_black_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/familyNameTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/given_name"
                app:startIconDrawable="@drawable/ic_person_outline_black_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/givenNameTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/phone_number"
                app:startIconDrawable="@drawable/ic_phone_black_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                app:startIconDrawable="@drawable/ic_calendar_today_black_24dp"
                app:helperTextEnabled="true"
                app:placeholderText="@string/birth_date_placeholder"
                app:placeholderTextColor="@color/colorSecondary"
                app:helperText="@string/birth_date_helper"
                android:hint="@string/birth_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birthDateTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUpBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/signup_final" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_link_prefix"
                android:layout_marginEnd="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUpGotoSignInBtn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_link"
                android:textAllCaps="false"
                app:cornerRadius="60sp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>